--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An analysis on teacher salaries to student outcomes across the world.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/brillantewang/teacherpay#readme",
   "dependencies": {
     "d3": "^4.12.0",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.5"
   }
 }
