--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "d3": "^4.12.0",
     "d3-ease": "^1.0.3",
+    "ordinal": "^1.0.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.5"
   }
